--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>goit-markup-hw-03</title>
     <!-- Normalize run -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css"
+    />
     <!-- Normalize end -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -17,138 +20,175 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <header class="header-container">
-      <nav>
-        <p class="header-label">
-          <span class="label-blue">Web</span>
-          <span class="label-black">Studio</span>
-        </p>
-        <ul class="header-flx-block-one">
-          <li>
-            <a class="header-text-1 uniform-link link uniform-link-current" href="index.html"
-              >Студия</a>
-          </li>
-          <li>
-            <a class="header-text-1 uniform-link link" href="portfolio.html">Портфолио</a>
-          </li>
-          <li><a class="header-text-1 uniform-link link" href="">Контакты</a></li>
-        </ul>
-      </nav>
-      <ul class="header-flx-block-two">
-        <li>
-          <a class="header-text-2 uniform-link link" href="mailto:info@devstudio.com"
-            >info@devstudio.com</a>
-        </li>
-        <li>
-          <a class="header-text-2 uniform-link link" href="tel:+380961111111"
-            >+38 096 111 11 11</a>
-        </li>
-      </ul>
+    <header>
+      <div class="container">
+        <div class="header-box">
+          <div class="header-box-1">
+            <nav class="header-logo-header-flx-block-one">
+              <p class="header-logo">
+                <span class="logo-blue">Web</span
+                ><span class="logo-black">Studio</span>
+              </p>
+              <ul class="header-flx-block-one">
+                <li>
+                  <a
+                    class="header-text-1 uniform-link link uniform-link-current"
+                    href="index.html"
+                    >Студия</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="header-text-1 uniform-link link"
+                    href="portfolio.html"
+                    >Портфолио</a
+                  >
+                </li>
+                <li>
+                  <a class="header-text-1 uniform-link link" href="#"
+                    >Контакты</a
+                  >
+                </li>
+              </ul>
+            </nav>
+          </div>
+          <div class="header-box-2">
+            <ul class="header-flx-block-two">
+              <li>
+                <a
+                  class="header-text-2 uniform-link link"
+                  href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li>
+                <a
+                  class="header-text-2 uniform-link link"
+                  href="tel:+380961111111"
+                  >+38 096 111 11 11</a
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
     </header>
     <main>
       <!-- Hero -->
-      <section class="hero-container">
-        <h1 class="hero-text">
-          Эффективные решения <br />
-          для вашего бизнеса
-        </h1>
-        <button class="hero-btn btn" type="button">Заказать услугу</button>
+      <section class="hero">
+        <div class="container">
+          <div class="hero-box">
+            <h1 class="hero-text">
+              Эффективные решения <br />
+              для вашего бизнеса
+            </h1>
+            <button class="hero-btn btn" type="button">Заказать услугу</button>
+          </div>
+        </div>
       </section>
       <!-- Unnamed -->
-      <section class="unnamed-container">
-        <ul class="unnamed-flx-block">
-          <li class="unnamed-txt-box-one">
-            <h3 class="unnamed-title">ВНИМАНИЕ К ДЕТАЛЯМ</h3>
-            <p class="unnamed-text">
-              Идейные соображения, а также начало повседневной работы по
-              формированию позиции.
-            </p>
-          </li>
-          <li class="unnamed-txt-box-two">
-            <h3 class="unnamed-title">ПУНКТУАЛЬНОСТЬ</h3>
-            <p class="unnamed-text">
-              Задача организации, в особенности же рамки и место обучения кадров
-              влечет за собой.
-            </p>
-          </li>
-          <li class="unnamed-txt-box-three">
-            <h3 class="unnamed-title">ПЛАНИРОВАНИЕ</h3>
-            <p class="unnamed-text">
-              Равным образом консультация с широким активом в значительной
-              степени обуславливает.
-            </p>
-          </li>
-          <li class="unnamed-txt-box-four">
-            <h3 class="unnamed-title">СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
-            <p class="unnamed-text">
-              Значимость этих проблем настолько очевидна, что реализация
-              плановых заданий.
-            </p>
-          </li>
-        </ul>
-      </section>
+      <div class="container">
+        <section class="unnamed-container">
+          <ul class="unnamed-flx-block">
+            <li class="unnamed-txt-box-one">
+              <h3 class="unnamed-title">ВНИМАНИЕ К ДЕТАЛЯМ</h3>
+              <p class="unnamed-text">
+                Идейные соображения, а также начало повседневной работы по
+                формированию позиции.
+              </p>
+            </li>
+            <li class="unnamed-txt-box-two">
+              <h3 class="unnamed-title">ПУНКТУАЛЬНОСТЬ</h3>
+              <p class="unnamed-text">
+                Задача организации, в особенности же рамки и место обучения
+                кадров влечет за собой.
+              </p>
+            </li>
+            <li class="unnamed-txt-box-three">
+              <h3 class="unnamed-title">ПЛАНИРОВАНИЕ</h3>
+              <p class="unnamed-text">
+                Равным образом консультация с широким активом в значительной
+                степени обуславливает.
+              </p>
+            </li>
+            <li class="unnamed-txt-box-four">
+              <h3 class="unnamed-title">СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
+              <p class="unnamed-text">
+                Значимость этих проблем настолько очевидна, что реализация
+                плановых заданий.
+              </p>
+            </li>
+          </ul>
+        </section>
+      </div>
       <!-- What -->
-      <section class="what-container">
-        <h2 class="what-title">Чем мы занимаемся</h2>
-        <ul class="what-pfoto-box">
-          <li class="what-pfoto-one">
-            <img src="./images/what-1.jpg" alt="фото" width="370" />
-          </li>
-          <li class="what-pfoto-two">
-            <img src="./images/what-2.jpg" alt="фото" width="370" />
-          </li>
-          <li class="what-pfoto-three">
-            <img src="./images/what-3.jpg" alt="фото" width="370" />
-          </li>
-        </ul>
+      <section class="what">
+        <div class="container">
+          <h2 class="what-title">Чем мы занимаемся</h2>
+          <ul class="what-pfoto-box">
+            <li class="what-pfoto-one">
+              <img src="./images/what-1.jpg" alt="фото" width="370" />
+            </li>
+            <li class="what-pfoto-two">
+              <img src="./images/what-2.jpg" alt="фото" width="370" />
+            </li>
+            <li class="what-pfoto-three">
+              <img src="./images/what-3.jpg" alt="фото" width="370" />
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- Our -->
       <section class="our-section">
-        <div class="our-container">
+        <div class="container">
           <h2 class="our-title">Наша команда</h2>
-          <ul class="our-box-flx">
-            <li class="our-box-one">
-              <img src="./images/our-1.jpg" alt="фото" width="270" />
-              <div class="our-text-block">
-                <h3 class="our-name">Игорь Демьяненко</h3>
-                <p class="our-specialty">
-                  <span lang="en">Product Designer</span>
-                </p>
-              </div>
-            </li>
-            <li class="our-box-two">
-              <img src="./images/our-2.jpg" alt="фото" width="270" />
-              <div class="our-text-block">
-                <h3 class="our-name">Ольга Репина</h3>
-                <p class="our-specialty">
-                  <span lang="en">Frontend Developer</span>
-                </p>
-              </div>
-            </li>
-            <li class="our-box-three">
-              <img src="./images/our-3.jpg" alt="фото" width="270" />
-              <div class="our-text-block">
-                <h3 class="our-name">Николай Тарасов</h3>
-                <p class="our-specialty"><span lang="en">Marketing</span></p>
-              </div>
-            </li>
-            <li class="our-box-four">
-              <img src="./images/our-4.jpg" alt="фото" width="270" />
-              <div class="our-text-block">
-                <h3 class="our-name">Михаил Ермаков</h3>
-                <p class="our-specialty"><span lang="en">UI Designer</span></p>
-              </div>
-            </li>
-          </ul>
-        </div>  
+          <div class="our-container">
+            <ul class="our-box-flx">
+              <li class="our-box-one">
+                <img src="./images/our-1.jpg" alt="фото" width="270" />
+                <div class="our-text-block">
+                  <h3 class="our-name">Игорь Демьяненко</h3>
+                  <p class="our-specialty">
+                    <span lang="en">Product Designer</span>
+                  </p>
+                </div>
+              </li>
+              <li class="our-box-two">
+                <img src="./images/our-2.jpg" alt="фото" width="270" />
+                <div class="our-text-block">
+                  <h3 class="our-name">Ольга Репина</h3>
+                  <p class="our-specialty">
+                    <span lang="en">Frontend Developer</span>
+                  </p>
+                </div>
+              </li>
+              <li class="our-box-three">
+                <img src="./images/our-3.jpg" alt="фото" width="270" />
+                <div class="our-text-block">
+                  <h3 class="our-name">Николай Тарасов</h3>
+                  <p class="our-specialty"><span lang="en">Marketing</span></p>
+                </div>
+              </li>
+              <li class="our-box-four">
+                <img src="./images/our-4.jpg" alt="фото" width="270" />
+                <div class="our-text-block">
+                  <h3 class="our-name">Михаил Ермаков</h3>
+                  <p class="our-specialty">
+                    <span lang="en">UI Designer</span>
+                  </p>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
       </section>
     </main>
 
-    <footer class="footer-one">
-      <div class="footer-container">
-        <p class="footer-label">
-          <span class="label-blue"> Web</span>
-          <span class="label-white">Studio</span>
+    <footer class="footer">
+      <div class="container">
+        <p class="footer-logo">
+          <span class="logo-blue"> Web</span>
+          <span class="logo-white">Studio</span>
         </p>
         <div class="address">
           <address>
