--- a/portfolio.html
+++ b/portfolio.html
@@ -18,156 +18,173 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <header class="header-container">
-      <nav>
-        <p class="header-label">
-          <span class="label-blue">Web</span>
-          <span class="label-black">Studio</span>
-        </p>
-        <ul class="header-flx-block-one">
-          <li>
-            <a class="header-text-1 uniform-link link" href="index.html"
-              >Студия</a
-            >
-          </li>
-          <li>
-            <a
-              class="header-text-1 uniform-link link uniform-link-current"
-              href="portfolio.html"
-              >Портфолио</a
-            >
-          </li>
-          <li>
-            <a class="header-text-1 uniform-link link" href="">Контакты</a>
-          </li>
-        </ul>
-      </nav>
-      <ul class="header-flx-block-two">
-        <li>
-          <a
-            class="header-text-2 uniform-link link"
-            href="mailto:info@devstudio.com"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li>
-          <a class="header-text-2 uniform-link link" href="tel:+380961111111"
-            >+38 096 111 11 11</a
-          >
-        </li>
-      </ul>
+    <header>
+      <div class="container">
+        <div class="header-box">
+          <div class="header-box-1">
+            <nav class="header-logo-header-flx-block-one">
+              <p class="header-logo">
+                <span class="logo-blue">Web</span
+                ><span class="logo-black">Studio</span>
+              </p>
+              <ul class="header-flx-block-one">
+                <li>
+                  <a
+                    class="header-text-1 uniform-link link"
+                    href="index.html"
+                    >Студия</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="header-text-1 uniform-link link uniform-link-current"
+                    href="portfolio.html"
+                    >Портфолио</a
+                  >
+                </li>
+                <li>
+                  <a class="header-text-1 uniform-link link" href="#"
+                    >Контакты</a
+                  >
+                </li>
+              </ul>
+            </nav>
+          </div>
+          <div class="header-box-2">
+            <ul class="header-flx-block-two">
+              <li>
+                <a
+                  class="header-text-2 uniform-link link"
+                  href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li>
+                <a
+                  class="header-text-2 uniform-link link"
+                  href="tel:+380961111111"
+                  >+38 096 111 11 11</a
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
     </header>
 
     <main>
-      <div class="portfolio-line"></div>
-      <section class="portfolio-container">
-        <ul class="portfolio-filters">
-          <li><button class="btn-flr-1 btn-flr" type="button">Все</button></li>
-          <li>
-            <button class="btn-flr-2 btn-flr" type="button">Веб-сайты</button>
-          </li>
-          <li>
-            <button class="btn-flr-3 btn-flr" type="button">Приложения</button>
-          </li>
-          <li>
-            <button class="btn-flr-4 btn-flr" type="button">Дизайн</button>
-          </li>
-          <li>
-            <button class="btn-flr-5 btn-flr" type="button">Маркетинг</button>
-          </li>
-        </ul>
-
-        <ul class="portfolio-projects">
-          <li class="portfolio-project-1">
-            <a href class="link portfolio-img">
-              <img src="./images/img-1.jpg" alt="фото" width="370"> 
-              <ul class="portfolio-border">
-                <li><h3 class="portfolio-name">Технокряк</h3></li>
-                <li><p class="portfolio-specialty">Веб-сайт</p></li>
-              </ul>  
-            </a>
-          </li>
-          <li class="portfolio-project-2">
-            <a href class="link portfolio-img">
-              <img src="./images/img-2.jpg" alt="фото" width="370" />
-              <ul class="portfolio-border">
-                <li><h3 class="portfolio-name">Постер<span lang="en"> New Orlean vs Golden Star</span></h3></li>
-                <li><p class="portfolio-specialty">Дизайн</p></li>
-              </ul>
-            </a>
-          </li>
-          <li class="portfolio-project-3">
-            <a href class="link portfolio-img">
-              <img src="./images/img-3.jpg" alt="фото" width="370" />
-              <ul class="portfolio-border">
-                <li><h3 class="portfolio-name">Ресторан<span lang="en"> Seafood</span></h3></li>
-                <li><p class="portfolio-specialty">Приложение</p></li>
-              </ul> 
-            </a>
-          </li>
-          <li class="portfolio-project-4">
-            <a href class=" link portfolio-img">
-              <img src="./images/img-4.jpg" alt="фото" width="370" />
-              <ul class="portfolio-border">
-                <li><h3 class="portfolio-name">Проект<span lang="en"> Prime</span></h3></li>
-                <li><p class="portfolio-specialty">Маркетинг</p></li>
-              </ul>  
-            </a>
-          </li>
-          <li class="portfolio-project-5">
-            <a href class="link portfolio-img">
-              <img src="./images/img-5.jpg" alt="фото" width="370" />
-              <ul class="portfolio-border">
-                <li><h3 class="portfolio-name">Проект<span lang="en"> Boxes</span></h3></li>
-                <li><p class="portfolio-specialty">Приложение</p></li>
-              </ul>  
-            </a>
-          </li>
-          <li class="portfolio-project-6">
-            <a href class="link portfolio-img">
-              <img src="./images/img-6.jpg" alt="фото" width="370" />
-              <ul class="portfolio-border">
-                <li><h3 class="portfolio-name"><span lang="en">Inspiration has no Borders</span></h3></li>
-                <li><p class="portfolio-specialty">Веб-сайт</p></li>
-              </ul>  
-            </a>
-          </li>
-          <li class="portfolio-project-7">
-            <a href class="link portfolio-img">
-              <img src="./images/img-7.jpg" alt="фото" width="370" />
-              <ul class="portfolio-border">
-                <li><h3 class="portfolio-name">Издание<span lang="en"> Limited Edition</span></h3></li>
-                <li><p class="portfolio-specialty">Дизайн</p></li>
-              </ul>  
-            </a>
-          </li>
-          <li class="portfolio-project-8">
-            <a href class="link portfolio-img">
-              <img src="./images/img-8.jpg" alt="фото" width="370" />
-              <ul class="portfolio-border">
-                <li><h3 class="portfolio-name">Проект<span lang="en"> LAB</span></h3></li>
-                <li><p class="portfolio-specialty">Маркетинг</p></li>
-              </ul>  
-            </a>
-          </li>
-          <li class="portfolio-project-9">
-            <a href class="link portfolio-img">
-              <img src="./images/img-9.jpg" alt="фото" width="370" />
-              <ul class="portfolio-border">
-                <li><h3 class="portfolio-name"><span lang="en">Growing Business</span></h3></li>
-                <li><p class="portfolio-specialty">Приложение</p></li>
-              </ul>  
-            </a>
-          </li>
-        </ul>
-      </section>
+      <div class="portfolio-line">
+      </div>
+      <div class="container">
+          <ul class="portfolio-filters">
+            <li><button class="btn-flr-1 btn-flr" type="button">Все</button></li>
+            <li>
+              <button class="btn-flr-2 btn-flr" type="button">Веб-сайты</button>
+            </li>
+            <li>
+              <button class="btn-flr-3 btn-flr" type="button">Приложения</button>
+            </li>
+            <li>
+              <button class="btn-flr-4 btn-flr" type="button">Дизайн</button>
+            </li>
+            <li>
+              <button class="btn-flr-5 btn-flr" type="button">Маркетинг</button>
+            </li>
+          </ul>
+        </div>
+        <div class="container">
+          <ul class="portfolio-projects">
+            <li class="portfolio-project-1">
+              <a href class="link portfolio-img">
+                <img src="./images/img-1.jpg" alt="фото" width="370"> 
+                <ul class="portfolio-border">
+                  <li><h3 class="portfolio-name">Технокряк</h3></li>
+                  <li><p class="portfolio-specialty">Веб-сайт</p></li>
+                </ul>  
+              </a>
+            </li>
+            <li class="portfolio-project-2">
+              <a href class="link portfolio-img">
+                <img src="./images/img-2.jpg" alt="фото" width="370" />
+                <ul class="portfolio-border">
+                  <li><h3 class="portfolio-name">Постер<span lang="en"> New Orlean vs Golden Star</span></h3></li>
+                  <li><p class="portfolio-specialty">Дизайн</p></li>
+                </ul>
+              </a>
+            </li>
+            <li class="portfolio-project-3">
+              <a href class="link portfolio-img">
+                <img src="./images/img-3.jpg" alt="фото" width="370" />
+                <ul class="portfolio-border">
+                  <li><h3 class="portfolio-name">Ресторан<span lang="en"> Seafood</span></h3></li>
+                  <li><p class="portfolio-specialty">Приложение</p></li>
+                </ul> 
+              </a>
+            </li>
+            <li class="portfolio-project-4">
+              <a href class=" link portfolio-img">
+                <img src="./images/img-4.jpg" alt="фото" width="370" />
+                <ul class="portfolio-border">
+                  <li><h3 class="portfolio-name">Проект<span lang="en"> Prime</span></h3></li>
+                  <li><p class="portfolio-specialty">Маркетинг</p></li>
+                </ul>  
+              </a>
+            </li>
+            <li class="portfolio-project-5">
+              <a href class="link portfolio-img">
+                <img src="./images/img-5.jpg" alt="фото" width="370" />
+                <ul class="portfolio-border">
+                  <li><h3 class="portfolio-name">Проект<span lang="en"> Boxes</span></h3></li>
+                  <li><p class="portfolio-specialty">Приложение</p></li>
+                </ul>  
+              </a>
+            </li>
+            <li class="portfolio-project-6">
+              <a href class="link portfolio-img">
+                <img src="./images/img-6.jpg" alt="фото" width="370" />
+                <ul class="portfolio-border">
+                  <li><h3 class="portfolio-name"><span lang="en">Inspiration has no Borders</span></h3></li>
+                  <li><p class="portfolio-specialty">Веб-сайт</p></li>
+                </ul>  
+              </a>
+            </li>
+            <li class="portfolio-project-7">
+              <a href class="link portfolio-img">
+                <img src="./images/img-7.jpg" alt="фото" width="370" />
+                <ul class="portfolio-border">
+                  <li><h3 class="portfolio-name">Издание<span lang="en"> Limited Edition</span></h3></li>
+                  <li><p class="portfolio-specialty">Дизайн</p></li>
+                </ul>  
+              </a>
+            </li>
+            <li class="portfolio-project-8">
+              <a href class="link portfolio-img">
+                <img src="./images/img-8.jpg" alt="фото" width="370" />
+                <ul class="portfolio-border">
+                  <li><h3 class="portfolio-name">Проект<span lang="en"> LAB</span></h3></li>
+                  <li><p class="portfolio-specialty">Маркетинг</p></li>
+                </ul>  
+              </a>
+            </li>
+            <li class="portfolio-project-9">
+              <a href class="link portfolio-img">
+                <img src="./images/img-9.jpg" alt="фото" width="370" />
+                <ul class="portfolio-border">
+                  <li><h3 class="portfolio-name"><span lang="en">Growing Business</span></h3></li>
+                  <li><p class="portfolio-specialty">Приложение</p></li>
+                </ul>  
+              </a>
+            </li>
+          </ul>
+        </div>
+      
     </main>
 
-    <footer class="footer-two">
-      <div class="footer-container">
-        <p class="footer-label">
-          <span class="label-blue"> Web</span>
-          <span class="label-white">Studio</span>
+    <footer class="footer">
+      <div class="container">
+        <p class="footer-logo">
+          <span class="logo-blue"> Web</span>
+          <span class="logo-white">Studio</span>
         </p>
         <div class="address">
           <address>
