--- a/index.html
+++ b/index.html
@@ -77,18 +77,17 @@
       <!-- Hero -->
       <section class="hero">
         <div class="container">
-          <div class="hero-box">
-            <h1 class="hero-text">
-              Эффективные решения <br />
-              для вашего бизнеса
-            </h1>
-            <button class="hero-btn btn" type="button">Заказать услугу</button>
-          </div>
+          <h1 class="hero-text">
+            Эффективные решения <br />
+            для вашего бизнеса
+          </h1>
+          <button class="hero-btn btn" type="button">Заказать услугу</button>
         </div>
       </section>
+      <!-- ----------------------------------------------- -->
       <!-- Unnamed -->
-      <div class="container">
-        <section class="unnamed-container">
+      <section class="unnamed">
+        <div class="container">
           <ul class="unnamed-flx-block">
             <li class="unnamed-txt-box-one">
               <h3 class="unnamed-title">ВНИМАНИЕ К ДЕТАЛЯМ</h3>
@@ -119,8 +118,9 @@
               </p>
             </li>
           </ul>
-        </section>
-      </div>
+        </div>
+      </section>
+      <!-- ----------------------------------------------- -->
       <!-- What -->
       <section class="what">
         <div class="container">
@@ -138,6 +138,7 @@
           </ul>
         </div>
       </section>
+      <!-- ----------------------------------------------- -->
       <!-- Our -->
       <section class="our-section">
         <div class="container">
@@ -183,7 +184,7 @@
         </div>
       </section>
     </main>
-
+    <!-- ----------------------------------------------- -->
     <footer class="footer">
       <div class="container">
         <p class="footer-logo">
@@ -193,13 +194,13 @@
         <div class="address">
           <address>
             <p class="footer-text-one">г. Киев, пр-т Леси Украинки, 26</p>
-            <ul class="footer-text-two">
-              <li>
+            <ul>
+              <li class="footer-text-two">
                 <a class="uniform-link link" href="mailto:info@devstudio.com"
                   >info@devstudio.com</a
                 >
               </li>
-              <li>
+              <li class="footer-text-two">
                 <a class="uniform-link link" href="tel:+380961111111"
                   >+38 096 111 11 11</a
                 >
