--- a/portfolio.html
+++ b/portfolio.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>goit-markup-hw-03</title>
     <!-- Normalize run -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css"
+    />
     <!-- Normalize end -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -18,7 +21,7 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <header>
+    <header class="line">
       <div class="container">
         <div class="header-box">
           <div class="header-box-1">
@@ -29,9 +32,7 @@
               </p>
               <ul class="header-flx-block-one">
                 <li>
-                  <a
-                    class="header-text-1 uniform-link link"
-                    href="index.html"
+                  <a class="header-text-1 uniform-link link" href="index.html"
                     >Студия</a
                   >
                 </li>
@@ -73,16 +74,19 @@
     </header>
 
     <main>
-      <div class="portfolio-line">
-      </div>
-      <div class="container">
+      <section class="portfolio">
+        <div class="container">
           <ul class="portfolio-filters">
-            <li><button class="btn-flr-1 btn-flr" type="button">Все</button></li>
+            <li>
+              <button class="btn-flr-1 btn-flr" type="button">Все</button>
+            </li>
             <li>
               <button class="btn-flr-2 btn-flr" type="button">Веб-сайты</button>
             </li>
             <li>
-              <button class="btn-flr-3 btn-flr" type="button">Приложения</button>
+              <button class="btn-flr-3 btn-flr" type="button">
+                Приложения
+              </button>
             </li>
             <li>
               <button class="btn-flr-4 btn-flr" type="button">Дизайн</button>
@@ -91,93 +95,124 @@
               <button class="btn-flr-5 btn-flr" type="button">Маркетинг</button>
             </li>
           </ul>
-        </div>
-        <div class="container">
+          
           <ul class="portfolio-projects">
             <li class="portfolio-project-1">
-              <a href class="link portfolio-img">
-                <img src="./images/img-1.jpg" alt="фото" width="370"> 
+              <a href class="link">
+                <img src="./images/img-1.jpg" alt="фото" width="370" />
                 <ul class="portfolio-border">
                   <li><h3 class="portfolio-name">Технокряк</h3></li>
                   <li><p class="portfolio-specialty">Веб-сайт</p></li>
-                </ul>  
+                </ul>
               </a>
             </li>
             <li class="portfolio-project-2">
-              <a href class="link portfolio-img">
+              <a href class="link">
                 <img src="./images/img-2.jpg" alt="фото" width="370" />
                 <ul class="portfolio-border">
-                  <li><h3 class="portfolio-name">Постер<span lang="en"> New Orlean vs Golden Star</span></h3></li>
+                  <li>
+                    <h3 class="portfolio-name">
+                      Постер<span lang="en"> New Orlean vs Golden Star</span>
+                    </h3>
+                  </li>
                   <li><p class="portfolio-specialty">Дизайн</p></li>
                 </ul>
               </a>
             </li>
             <li class="portfolio-project-3">
-              <a href class="link portfolio-img">
+              <a href class="link">
                 <img src="./images/img-3.jpg" alt="фото" width="370" />
                 <ul class="portfolio-border">
-                  <li><h3 class="portfolio-name">Ресторан<span lang="en"> Seafood</span></h3></li>
+                  <li>
+                    <h3 class="portfolio-name">
+                      Ресторан<span lang="en"> Seafood</span>
+                    </h3>
+                  </li>
                   <li><p class="portfolio-specialty">Приложение</p></li>
-                </ul> 
+                </ul>
               </a>
             </li>
             <li class="portfolio-project-4">
-              <a href class=" link portfolio-img">
+              <a href class="link">
                 <img src="./images/img-4.jpg" alt="фото" width="370" />
                 <ul class="portfolio-border">
-                  <li><h3 class="portfolio-name">Проект<span lang="en"> Prime</span></h3></li>
+                  <li>
+                    <h3 class="portfolio-name">
+                      Проект<span lang="en"> Prime</span>
+                    </h3>
+                  </li>
                   <li><p class="portfolio-specialty">Маркетинг</p></li>
-                </ul>  
+                </ul>
               </a>
             </li>
             <li class="portfolio-project-5">
-              <a href class="link portfolio-img">
+              <a href class="link">
                 <img src="./images/img-5.jpg" alt="фото" width="370" />
                 <ul class="portfolio-border">
-                  <li><h3 class="portfolio-name">Проект<span lang="en"> Boxes</span></h3></li>
+                  <li>
+                    <h3 class="portfolio-name">
+                      Проект<span lang="en"> Boxes</span>
+                    </h3>
+                  </li>
                   <li><p class="portfolio-specialty">Приложение</p></li>
-                </ul>  
+                </ul>
               </a>
             </li>
             <li class="portfolio-project-6">
-              <a href class="link portfolio-img">
+              <a href class="link">
                 <img src="./images/img-6.jpg" alt="фото" width="370" />
                 <ul class="portfolio-border">
-                  <li><h3 class="portfolio-name"><span lang="en">Inspiration has no Borders</span></h3></li>
+                  <li>
+                    <h3 class="portfolio-name">
+                      <span lang="en">Inspiration has no Borders</span>
+                    </h3>
+                  </li>
                   <li><p class="portfolio-specialty">Веб-сайт</p></li>
-                </ul>  
+                </ul>
               </a>
             </li>
             <li class="portfolio-project-7">
-              <a href class="link portfolio-img">
+              <a href class="link">
                 <img src="./images/img-7.jpg" alt="фото" width="370" />
                 <ul class="portfolio-border">
-                  <li><h3 class="portfolio-name">Издание<span lang="en"> Limited Edition</span></h3></li>
+                  <li>
+                    <h3 class="portfolio-name">
+                      Издание<span lang="en"> Limited Edition</span>
+                    </h3>
+                  </li>
                   <li><p class="portfolio-specialty">Дизайн</p></li>
-                </ul>  
+                </ul>
               </a>
             </li>
             <li class="portfolio-project-8">
-              <a href class="link portfolio-img">
+              <a href class="link">
                 <img src="./images/img-8.jpg" alt="фото" width="370" />
                 <ul class="portfolio-border">
-                  <li><h3 class="portfolio-name">Проект<span lang="en"> LAB</span></h3></li>
+                  <li>
+                    <h3 class="portfolio-name">
+                      Проект<span lang="en"> LAB</span>
+                    </h3>
+                  </li>
                   <li><p class="portfolio-specialty">Маркетинг</p></li>
-                </ul>  
+                </ul>
               </a>
             </li>
             <li class="portfolio-project-9">
-              <a href class="link portfolio-img">
+              <a href class="link">
                 <img src="./images/img-9.jpg" alt="фото" width="370" />
                 <ul class="portfolio-border">
-                  <li><h3 class="portfolio-name"><span lang="en">Growing Business</span></h3></li>
+                  <li>
+                    <h3 class="portfolio-name">
+                      <span lang="en">Growing Business</span>
+                    </h3>
+                  </li>
                   <li><p class="portfolio-specialty">Приложение</p></li>
-                </ul>  
+                </ul>
               </a>
             </li>
           </ul>
         </div>
-      
+      </section>
     </main>
 
     <footer class="footer">
@@ -189,13 +224,13 @@
         <div class="address">
           <address>
             <p class="footer-text-one">г. Киев, пр-т Леси Украинки, 26</p>
-            <ul class="footer-text-two">
-              <li>
+            <ul>
+              <li class="footer-text-two">
                 <a class="uniform-link link" href="mailto:info@devstudio.com"
                   >info@devstudio.com</a
                 >
               </li>
-              <li>
+              <li class="footer-text-two">
                 <a class="uniform-link link" href="tel:+380961111111"
                   >+38 096 111 11 11</a
                 >
